--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
         <version.org.apache.httpcomponents.httpclient>4.3.6</version.org.apache.httpcomponents.httpclient>
         <version.org.apache.httpcomponents.httpcore>4.3.3</version.org.apache.httpcomponents.httpcore>
         <version.org.apache.maven>3.2.1</version.org.apache.maven>
-        <version.org.apache.xerces>2.9.1-jbossas-2</version.org.apache.xerces>
+        <version.org.apache.xerces>2.11.0.SP3</version.org.apache.xerces>
         <version.org.bouncycastle>1.50</version.org.bouncycastle>
         <version.org.codehaus.plexus.plexus-utils>3.0.21</version.org.codehaus.plexus.plexus-utils>
         <version.org.codehaus.woodstox.stax2-api>3.1.4</version.org.codehaus.woodstox.stax2-api>
